--- a/NetCoreBookStore/Views/_ViewImports.cshtml
+++ b/NetCoreBookStore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using NetCoreBookStore.Controllers
+@using NetCoreBookStore.Data.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
