--- a/NetCoreBookStore/Views/_ViewImports.cshtml
+++ b/NetCoreBookStore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NetCoreBookStore.Controllers
 @using NetCoreBookStore.Data.ViewModel
+@using NetCoreBookStore.Data.ResponseModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
