--- a/NetCoreBookStore/Views/Shared/_BookItem.cshtml
+++ b/NetCoreBookStore/Views/Shared/_BookItem.cshtml
@@ -1,13 +1,8 @@
-﻿
+﻿@model BookVM
 
     <div class="item">
-        <img src="images/img1.jpg" alt="img">
-        <h3>how to be a bwase</h3>
-        <h6><span class="price">$49</span> / <a href="#">Buy Now</a></h6>
-        @*<span class="sale">Sale !</span>*@
-        <div class="hover">
-            <a href="product-single.html">
-                <span><i class="fa fa-long-arrow-right" aria-hidden="true"></i></span>
-            </a>
-        </div>
+        <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id"><img src="@Model.Image" alt="img"></a>
+        <h3><a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id">@Model.Title</a></h3>
+        <h6><span class="price">$49</span> / <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id">Buy Now</a></h6>
+        @*<span class="sale">Sale !</span>*@      
     </div>
