--- a/NetCoreBookStore/Views/Shared/_RecentBooks.cshtml
+++ b/NetCoreBookStore/Views/Shared/_RecentBooks.cshtml
@@ -1,153 +1,22 @@
-﻿<section class="recent-book-sec">
+﻿@model IEnumerable<BookVM>
     <div class="container">
-        <div class="title">
-            <h2>recent books</h2>
-            <hr>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r1.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
+
+        <div class="recent-book-sec">
+            <div class="title">
+                <h2>recent books</h2>
+                <hr>
             </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r2.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
+            <div class="row">
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-3">
+                        <partial name="_BookItem" model="@item" />
+                    </div>
+                }
             </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r3.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
+
+            <div class="btn-sec">
+                <a href="products.html" class="btn gray-btn">load More books</a>
             </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r4.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r5.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r1.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r2.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r3.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r4.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r5.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r1.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r2.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r3.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r4.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r5.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r1.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r2.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r3.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r4.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="item">
-                    <img src="images/r5.jpg" alt="img">
-                    <h3><a href="#">Keepers of the kalachakara</a></h3>
-                    <h6><span class="price">$19</span> / <a href="#">Buy Now</a></h6>
-                </div>
-            </div>
-        </div>
-        <div class="btn-sec">
-            <a href="products.html" class="btn gray-btn">load More books</a>
         </div>
     </div>
-</section>
