--- a/NetCoreBookStore/Views/Shared/_Layout.cshtml
+++ b/NetCoreBookStore/Views/Shared/_Layout.cshtml
@@ -37,10 +37,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="navbar-item active">
-                                <a href="index.html" class="nav-link">Home</a>
+                                <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                             </li>
                             <li class="navbar-item">
-                                <a href="shop.html" class="nav-link">Shop</a>
+                                <a asp-controller="Product" asp-action="List" class="nav-link">Shop</a>
                             </li>
                             <li class="navbar-item">
                                 <a href="about.html" class="nav-link">About</a>
