--- a/NetCoreBookStore/Views/Shared/_Layout.cshtml
+++ b/NetCoreBookStore/Views/Shared/_Layout.cshtml
@@ -52,12 +52,8 @@
                                 <a href="login.html" class="nav-link">Login</a>
                             </li>
                         </ul>
-                        <div class="cart my-2 my-lg-0">
-                            <span>
-                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            </span>
-                            <span class="quntity">3</span>
-                        </div>
+                        @*Cart*@
+                        @await Component.InvokeAsync("ShoppingCartSummary")
                         <form class="form-inline my-2 my-lg-0">
                             <input class="form-control mr-sm-2" type="search" placeholder="Search here..." aria-label="Search">
                             <span class="fa fa-search"></span>
