--- a/NetCoreBookStore/Views/ShoppingCart/Index.cshtml
+++ b/NetCoreBookStore/Views/ShoppingCart/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model ShoppingCartViewModel
-@{ ViewData["Title"] = "Cart";
-}
+@{ ViewData["Title"] = "Cart"; }
 <div class="breadcrumb">
     <div class="container">
         <a class="breadcrumb-item" asp-controller="Home" asp-action="Index">Home</a>
@@ -21,42 +20,37 @@
             <tbody>
                 @foreach (var item in Model.ShoppingCart.ShoppingCartItems)
                 {
-            <tr>
-                <td>
-                    <figure class="media">
-                        <div class="img-wrap"><img src="@item.Book.Images.FirstOrDefault(x => x.Sort == 1).ImgPath" class="img-thumbnail img-sm"></div>
-                        <figcaption class="media-body">
-                            <h6 class="title text-truncate">@item.Book.Title </h6>
-                            <dl class="param param-inline small">
-                                <dt>Size: </dt>
-                                <dd>XXL</dd>
-                            </dl>
-                            <dl class="param param-inline small">
-                                <dt>Color: </dt>
-                                <dd>Orange color</dd>
-                            </dl>
-                        </figcaption>
-                    </figure>
-                </td>
-                <td>
-                    @item.Amount
-                    @*<select class="form-control">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-            </select>*@
-                </td>
-                <td>
-                    <div class="price-wrap">
-                        <var class="price">@((item.Amount * item.Book.Price).ToString("c"))</var>
-                        <small class="text-muted">(@item.Book.Price.ToString("c"))</small>
-                    </div> <!-- price-wrap .// -->
-                </td>
-                <td class="text-right">
-                    <a asp-action="RemoveFromShoppingCart" asp-route-bookId="@item.Book.Id" class="btn btn-outline-danger"> × Remove</a>
-                </td>
-            </tr>}
+                    <tr>
+                        <td>
+                            <figure class="media">
+                                <div class="img-wrap"><img src="@item.Book.Images.FirstOrDefault(x => x.Sort == 1).ImgPath" class="img-thumbnail img-sm"></div>
+                                <figcaption class="media-body">
+                                    <h6 class="title text-truncate">@item.Book.Title </h6>
+                                    <dl class="param param-inline small">
+                                        <dt>Size: </dt>
+                                        <dd>XXL</dd>
+                                    </dl>
+                                    <dl class="param param-inline small">
+                                        <dt>Color: </dt>
+                                        <dd>Orange color</dd>
+                                    </dl>
+                                </figcaption>
+                            </figure>
+                        </td>
+                        <td>
+                            @item.Amount
+                        </td>
+                        <td>
+                            <div class="price-wrap">
+                                <var class="price">@((item.Amount * item.Book.Price).ToString("c"))</var>
+                                <small class="text-muted">(@item.Book.Price.ToString("c") each)</small>
+                            </div> <!-- price-wrap .// -->
+                        </td>
+                        <td class="text-right">
+                            <a asp-action="RemoveFromShoppingCart" asp-route-bookId="@item.Book.Id" class="btn btn-outline-danger"> × Remove</a>
+                        </td>
+                    </tr>
+                }
                 @if (Model.ShoppingCartTotal > 0)
                 {
                     <tr>
@@ -70,4 +64,7 @@
         </table>
     </div> <!-- card.// -->
 
+    <div class="text-center">
+        <a class="btn btn-primary" asp-controller="Order" asp-action="Checkout">Check out now!</a>
+    </div>
 </div>
