--- a/NetCoreBookStore/Views/Home/Index.cshtml
+++ b/NetCoreBookStore/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<BookVM>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Bookstore - Index";
     var rec = (List<BookVM>)ViewBag.Recommended;
 }
 
