--- a/NetCoreBookStore/Views/Order/Checkout.cshtml
+++ b/NetCoreBookStore/Views/Order/Checkout.cshtml
@@ -1,5 +1,8 @@
 ﻿@model OrderVM
+@{ 
+    ViewData["Title"] = "Checkout";
 
+}
     <div class="container">
         <form asp-action="Checkout" method="post" class="form-horizontal" role="form">
             <div asp-validation-summary="All" class="text-danger"></div>
