--- a/NetCoreBookStore/Views/Order/CheckoutComplete.cshtml
+++ b/NetCoreBookStore/Views/Order/CheckoutComplete.cshtml
@@ -1,3 +1,7 @@
-﻿<div class="container">
+﻿@{ 
+    ViewData["Title"] = "Checkout Complete";
+}
+
+<div class="container">
     <h1>@ViewBag.CheckoutCompleteMessage </h1>
 </div>
