--- a/NetCoreBookStore/Views/Shared/_Layout.cshtml
+++ b/NetCoreBookStore/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                             </li>
                             <li class="navbar-item">
                                 <a href="faq.html" class="nav-link">FAQ</a>
-                            </li>                           
+                            </li>
                             <partial name="_LoginPartial" />
                         </ul>
                         @*Cart*@
@@ -159,5 +159,6 @@
     <script src="~/content/js/custom.js"></script>
 
     @RenderSection("scripts", required: false)
+    <script src="~/content/js/scripts.js"></script>
 </body>
 </html>
