--- a/NetCoreBookStore/Views/_ViewImports.cshtml
+++ b/NetCoreBookStore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NetCoreBookStore.Models
 @using NetCoreBookStore.Data.ViewModel
 @using NetCoreBookStore.Data.ResponseModel
+@using NetCoreBookStore.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
