--- a/NetCoreBookStore/Views/Shared/_About.cshtml
+++ b/NetCoreBookStore/Views/Shared/_About.cshtml
@@ -7,8 +7,8 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's printer took a galley of type and Scrambled it to make a type and typesetting industry. Lorem Ipsum has been the book. </p>
         <p>It has survived not only fiveLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's printer took a galley of type and</p>
         <div class="btn-sec">
-            <a href="shop.html" class="btn yellow">shop books</a>
-            <a href="login.html" class="btn black">subscriptions</a>
+            <a asp-controller="Product" asp-action="List" class="btn yellow">shop books</a>
+            <a asp-area="Identity" asp-page="/Account/Login" class="btn black">subscriptions</a>
         </div>
     </div>
 </section>
