Swap core and data layer

--- a/NetCoreBookStore/Views/Shared/_LoginPartial.cshtml
+++ b/NetCoreBookStore/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using NetCoreBookStore.Data.Entities
+@using NetCoreBookStore.Core.Entities
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
