--- a/NetCoreBookStore/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/NetCoreBookStore/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using NetCoreBookStore.Areas.Identity
 @using NetCoreBookStore.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using NetCoreBookStore.Data.Entities
+@using NetCoreBookStore.Core.Entities
