--- a/NetCoreBookStore/Views/Shared/_Layout.cshtml
+++ b/NetCoreBookStore/Views/Shared/_Layout.cshtml
@@ -6,11 +6,23 @@
     <title>@ViewBag.Title</title>
     <meta name="theme-color" content="#03a6f3">
 
-    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="~/content/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="~/content/css/styles.css" rel="stylesheet" />
+    <environment include="Development">
+        <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    </environment>
+
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/css/bootstrap.css"
+              asp-fallback-test-class=”sr-only”
+              asp-fallback-test-property=”position”
+              asp-fallback-test-value=”absolute”
+              integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    </environment>
+
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800,900" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="~/content/css/owl.carousel.min.css" rel="stylesheet" />
+        <link href="~/content/css/styles.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -153,8 +165,23 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/jquery.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    <environment include="Development">
+        <script src="~/lib/jquery/jquery.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://code.jquery.com/jquery-3.5.1.js"
+                asp-fallback-src="~/lib/jquery/jquery.js"
+                asp-fallback-test="JQuery"
+                integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+                asp-fallback-src="~/lib/bootstrap/js/bootstrap.js"
+                asp-fallback-test="Bootstrap js"
+                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+        </script>
+    </environment>
+
     <script src="~/content/js/owl.carousel.min.js"></script>
     <script src="~/content/js/custom.js"></script>
 
