--- a/NetCoreBookStore/Views/Shared/_Layout.cshtml
+++ b/NetCoreBookStore/Views/Shared/_Layout.cshtml
@@ -15,8 +15,7 @@
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.css"
               asp-fallback-test-class=”sr-only”
               asp-fallback-test-property=”position”
-              asp-fallback-test-value=”absolute”
-              integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+              asp-fallback-test-value=”absolute”>
     </environment>
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -53,12 +52,6 @@
                             </li>
                             <li class="navbar-item">
                                 <a asp-controller="Product" asp-action="List" class="nav-link">Shop</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a href="about.html" class="nav-link">About</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a href="faq.html" class="nav-link">FAQ</a>
                             </li>
                             <partial name="_LoginPartial" />
                         </ul>
@@ -172,12 +165,11 @@
     <environment exclude="Development">
         <script src="https://code.jquery.com/jquery-3.5.1.js"
                 asp-fallback-src="~/lib/jquery/jquery.js"
-                asp-fallback-test="JQuery"
+                asp-fallback-test="window.jQuery"
                 integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
         </script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/js/bootstrap.js"
-                asp-fallback-test="Bootstrap js"
                 integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
         </script>
     </environment>
